code25_all/swift/24728463.txt
for (index, obj) in enumerate(self)
(lldb) po element error: <EXPR>:1:1: error: use of unresolved identifier 'element' element ^ <EXPR>:11:5: error: use of unresolved identifier '$__lldb_injected_self'
    $__lldb_injected_self.$__lldb_wrapped_expr_7(     
    ^

//Array extension

func contains<T : Equatable>(element : T) -> Bool
{
    return indexOfObject(element) != nil
}

func indexOfObject<T : Equatable>(element : T) -> Int?
{
    for (index, obj) in enumerate(self) //when this is first executed element variable loses its value. any attempt to access element variable (even outside of this scope) results in EXC_BAD_ACCESS
    {
        let tempObj = obj as T

        if element == tempObj
        {
            return index;
        }
    }

    return nil;
}


//Game.swift

func addGameDelegate <T where T: GameDelegate, T: Equatable> (#gameDelegate : T)
{
    if !_gameDelegates.contains(gameDelegate)
    {
        _gameDelegates += gameDelegate  //EXC_BAD_ACCESS
    }
}

